# cpp-vcpkg

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: vcpkg_build_debug.yml  vcpkg_build_release.yml
src/: CMakeLists.txt
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
